# objc-weakify

./: .travis.yml  README.md
example/: CMakeLists.txt  main.m
include/pqrs/: weakify.h
tests/src/: CMakeLists.txt  test.m
